SF-Custom-Objects/salesforce_ant_46.0/sample/retrieveUnpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ADO_Role__c</fullName>
        <label>ADO Role</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GTL</fullName>
                </value>
                <value>
                    <fullName>COR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EAU_ID__c</fullName>
        <label>EAU ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_COR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is COR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_CRMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is CRMS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GTL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is GTL</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>